# keyjawn

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SOCIAL.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  deploy-site.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
docs/: CNAME  follow-up-2026-02-24.md  ios-development-research.md  release-style-guide.md
docs/claude/: worker-readme.md
docs/plans/: 2026-02-15-jawnkeys-implementation.md  2026-02-15-jawnkeys-keyboard-design.md  (+15 more)
ios/: project.yml
ios/KeyJawn/: Info.plist
scripts/: generate-store-assets.py
store/: .env.example  app.py  db.py  email_sender.py  r2.py  requirements.txt  start.sh  telegram.py
website/: astro.config.mjs  package-lock.json  package.json
worker/: keyjawn-worker.service  pyproject.toml  start.sh
worker/docs/plans/: 2026-02-16-social-media-strategy-design.md
worker/tests/: test_accounts.py  test_approvals.py  test_calendar_gen.py  test_config.py  test_content.py  test_curation.py  test_db.py  test_discovery.py  test_executor.py  test_integration.py  test_monitor.py  test_platforms.py  test_telegram.py
worker/worker/: accounts.py  approvals.py  calendar_gen.py  config.py  content.py  db.py  discovery.py  executor.py  main.py  manage.py  monitor.py  runner.py  telegram.py
worker/worker/curation/: __init__.py  boost.py  evaluate.py  keywords.py  models.py  monitor.py  pipeline.py
worker/worker/curation/sources/: __init__.py  news.py  twitch.py  youtube.py
(+196 files in other folders)
