[project]
name = "keyjawn-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "twikit>=2.0.0",
    "atproto>=0.0.55",
    "apscheduler>=3.10.0",
    "redis>=5.0.0",
    "feedparser>=6.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
